# ChangeLog for kde-base/kate
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kate/ChangeLog,v 1.72 2007/01/31 21:17:10 corsair Exp $

  31 Jan 2007; Markus Rothe <corsair@gentoo.org> kate-3.5.5-r1.ebuild:
  Stable on ppc64; bug #164080

  31 Jan 2007; Joseph Jezak <josejx@gentoo.org> kate-3.5.5-r1.ebuild:
  Marked ppc stable for bug #164080.

  30 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> kate-3.5.5-r1.ebuild:
  Stable on sparc wrt #164080

  30 Jan 2007; Raúl Porcel <armin76@gentoo.org> kate-3.5.5-r1.ebuild:
  x86 stable wrt bug 164080

  17 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> kate-3.5.6.ebuild:
  Remove unneeded patch.

*kate-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> +kate-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  14 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/kate-gcc-4.patch:
  Remove stray patch.

*kate-3.5.5-r1 (14 Dec 2006)

  14 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/kate-3.5.5-visibility.patch, +kate-3.5.5-r1.ebuild:
  Add patch to fix issues with hidden visibility disabled, bug #158146. Thanks
  Timothy for reporting.

  11 Dec 2006; <kloeri@gentoo.org> kate-3.5.5.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> kate-3.5.5.ebuild:
  Stable on Alpha.

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> kate-3.5.2.ebuild,
  kate-3.5.5.ebuild:
  Make support for hidden visibility explicit.

  26 Nov 2006; Markus Rothe <corsair@gentoo.org> kate-3.5.5.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -kate-3.5.3.ebuild,
  -kate-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> kate-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> kate-3.5.5.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> kate-3.5.5.ebuild: