@@ -1,3 +1,0 @@
-MD5 c5685e1be34e033286aa1f37002a0552 kdebase-3.5.2.tar.bz2 23590820
-RMD160 216ff59c49bb4fee2aa3b7d976ec40a8cccff107 kdebase-3.5.2.tar.bz2 23590820
-SHA256 21150b7e553e83487e70e70e3d13ce107c6c5d57133b40f413807887a9e431f7 kdebase-3.5.2.tar.bz2 23590820
