@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kate
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kate/ChangeLog,v 1.72 2007/01/31 21:17:10 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kate/ChangeLog,v 1.73 2007/02/04 01:45:15 flameeyes Exp $
+
+  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> -kate-3.5.2.ebuild:
+  Remove old versions.
 
   31 Jan 2007; Markus Rothe <corsair@gentoo.org> kate-3.5.5-r1.ebuild:
   Stable on ppc64; bug #164080
